@@ -26,7 +26,8 @@
 
 /**
   Cartridge class used for CBS' RAM Plus cartridges.  There are three 4K
-  banks, accessible by read/write at $1FF8 - $1FFA, and 256 bytes of RAM.
+  banks, accessible by read/write at $1FF8 - $1FFA (note: D0 has to be 1
+  for switching), and 256 bytes of RAM.
   RAM read port is $1100 - $11FF, write port is $1000 - $10FF.
 
   @author  Bradford W. Mott, Thomas Jentzsch
